infra/base/node-exporter/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: node-exporter
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: node-exporter
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
      ports:
        - protocol: TCP
          port: 9100
  policyTypes:
    - Ingress
